--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 {% load static %}
+{% get_static_prefix as STATIC_URL %}
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 
 <head>
@@ -213,7 +214,7 @@
 								{% for plan in plans1 %}
 								<div class="invest-plan__item">
 									<div class="plan-item__icon">
-										<img src="{% static "img-new/plan{{ forloop.counter }}.svg" %}" alt="" style="height:42px">
+										<img src="{{ STATIC_URL }}img-new/plan{{ forloop.counter }}.svg" alt="" style="height:42px">
 									</div>
 									<div class="text-white mb-2" style="color:white">{{ plan.name }}</div>
 									<div class="invest-plan__head">
@@ -247,7 +248,7 @@
 								{% for plan in plans2 %}
 								<div class="invest-plan__item">
 									<div class="plan-item__icon">
-										<img src="{% static "img-new/plan{{ forloop.counter|add:2 }}.svg" %}" alt="" style="height:42px">
+										<img src="{{ STATIC_URL }}img-new/plan{{ forloop.counter|add:2 }}.svg" alt="" style="height:42px">
 									</div>
 									<div class="text-white mb-2" style="color:white">{{ plan.name }}</div>
 									<div class="invest-plan__head">
@@ -973,7 +974,7 @@
 	</style>
 	<script>window.gtranslateSettings = { "default_language": "en", "native_language_names": true, "languages": ["en", "ru", "fr", "de", "it", "es", "uk", "tr"], "wrapper_selector": ".gtranslate_wrapper", "float_switcher_open_direction": "right" }</script>
 
-	<script src="../../cdn.gtranslate.net/widgets/latest/float.js" defer></script>
+	<script src="https://cdn.gtranslate.net/widgets/latest/float.js" defer></script>
 
 	<script>
 		// Partners Animation Script
