--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -136,7 +136,7 @@
 												</svg>
 											</div>
 										</a>
-										<a class="header-menu__item" href="{% url "index" %}">
+										<a class="header-menu__item" href="{% url "contact" %}">
 											<span>
 												<i style="font-style: normal;">Contacts
 												</i>
