--- a/core/templates/base1.html
+++ b/core/templates/base1.html
@@ -39,6 +39,17 @@
                                                 </svg>
                                             </div>
                                         </a>
+                                        <a class="header-menu__item" href="{% url "about" %}">
+                                            <span>
+                                                <i style="font-style: normal;">About Us
+                                                </i>
+                                            </span>about
+                                            <div class="header-menu__icon">
+                                                <svg>
+                                                    <use xlink:href="assets/img/sprite.svg#arrow"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
                                         <a class="header-menu__item" href="{% url "faq" %}">
                                             <span>
                                                 <i style="font-style: normal;">FAQ
@@ -109,6 +120,28 @@
                                                     <i style="font-style: normal;">Home
                                                     </i>
                                                 </span>main
+                                                <div class="header-menu__icon">
+                                                    <svg>
+                                                        <use xlink:href="assets/img/sprite.svg#arrow"></use>
+                                                    </svg>
+                                                </div>
+                                            </a>
+                                            <a class="header-menu__item" href="{% url "about" %}">
+                                                <span>
+                                                    <i style="font-style: normal;">About Us
+                                                    </i>
+                                                </span>about
+                                                <div class="header-menu__icon">
+                                                    <svg>
+                                                        <use xlink:href="assets/img/sprite.svg#arrow"></use>
+                                                    </svg>
+                                                </div>
+                                            </a>
+                                            <a class="header-menu__item" href="{% url "about" %}">
+                                                <span>
+                                                    <i style="font-style: normal;">About Us
+                                                    </i>
+                                                </span>about
                                                 <div class="header-menu__icon">
                                                     <svg>
                                                         <use xlink:href="assets/img/sprite.svg#arrow"></use>
