--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -19,6 +19,7 @@
 		<link rel="stylesheet" href="{% static 'css/style.css' %}">
 		<link rel="stylesheet" href="{% static 'css/spop.min.css' %}">
 	</noscript>
+	<meta name="google-site-verification" content="6XcNdyO2J6hA0oL2bKX-TPd5VjqqdqYz1b3v-wBbDjM" />
 </head>
 
 <body>
