--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -32,6 +32,19 @@
 	<link rel="stylesheet" href="{% static 'css/style.css' %}">
 	<link href="{% static 'css/spop.min.css' %}" rel="stylesheet">
 	<title>About Us - Global Regional Strategy</title>
+
+	<!-- Google Search Console Verification -->
+	<meta name="google-site-verification" content="6XcNdyO2J6hA0oL2bKX-TPd5VjqqdqYz1b3v-wBbDjM" />
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-M26435V4TM"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-M26435V4TM');
+	</script>
 </head>
 
 <body>
