--- a/core/templates/base1.html
+++ b/core/templates/base1.html
@@ -15,6 +15,18 @@
 	<link rel="stylesheet" href="{% static "css/style.css" %}">
 	<link href="{% static "css/spop.min.css" %}" rel="stylesheet">
 </head>
+<!-- Google Search Console Verification -->
+	<meta name="google-site-verification" content="6XcNdyO2J6hA0oL2bKX-TPd5VjqqdqYz1b3v-wBbDjM" />
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-M26435V4TM"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-M26435V4TM');
+	</script>
 
 <body>
 	<div class="wrapper">
