--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -19,7 +19,19 @@
 		<link rel="stylesheet" href="{% static 'css/style.css' %}">
 		<link rel="stylesheet" href="{% static 'css/spop.min.css' %}">
 	</noscript>
+
+	<!-- Google Search Console Verification -->
 	<meta name="google-site-verification" content="6XcNdyO2J6hA0oL2bKX-TPd5VjqqdqYz1b3v-wBbDjM" />
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-M26435V4TM"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-M26435V4TM');
+	</script>
 </head>
 
 <body>
@@ -1068,27 +1080,7 @@
 		});
 	</script>
 
-	<!-- Google Search Console Verification -->
-	<meta name="google-site-verification" content="YOUR_VERIFICATION_CODE_HERE" />
-
-	<!-- Google Analytics -->
-	<script>
-		(function() {
-			var script = document.createElement('script');
-			script.async = true;
-			script.src = 'https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID';
-			document.head.appendChild(script);
-
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-			gtag('config', 'GA_MEASUREMENT_ID', {
-				'anonymize_ip': true,
-				'allow_google_signals': false,
-				'allow_ad_features': false
-			});
-		})();
-	</script>
+	
 
 </body>
 
